Add constant to age, nationality and split values in CandidateValidator class. Replace Collectors.toList() to toList() for all methods in StreamPractice class.